# hyperware-anthropic-sdk

./: Cargo.toml  README.md
examples/: custom_headers.rs  oauth_example.rs  prompt_caching.rs  retry_demo.rs
implementation-docs/: initial-prompt.md
src/: client.rs  conversation.rs  error.rs  lib.rs
src/types/: messages.rs  mod.rs  tools.rs
tests/: retry_test.rs
